--- a/HotdogOrNot/Base.lproj/Main.storyboard
+++ b/HotdogOrNot/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ulm-Hi-0cb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,21 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5cb-WW-SJm">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dK5-Sd-KGP">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5cb-WW-SJm">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="375" id="H0u-iw-Uov"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="H0u-iw-Uov"/>
-                                    <constraint firstAttribute="height" constant="598" id="eY7-SN-qeQ"/>
+                                    <constraint firstItem="5cb-WW-SJm" firstAttribute="top" secondItem="dK5-Sd-KGP" secondAttribute="top" id="6PP-PJ-ZkO"/>
+                                    <constraint firstItem="5cb-WW-SJm" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="lQO-Aq-6g3"/>
+                                    <constraint firstAttribute="bottom" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="wY7-k2-RFs"/>
+                                    <constraint firstAttribute="trailing" secondItem="5cb-WW-SJm" secondAttribute="trailing" id="zdp-Wa-egX"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🌭or ❌" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTq-bX-Fdd">
-                                <rect key="frame" x="0.0" y="301" width="375" height="85"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.154296875" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
-                            </label>
+                            </view>
                             <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WS3-KO-xaL">
                                 <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -50,24 +53,72 @@
                         <constraints>
                             <constraint firstItem="WS3-KO-xaL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Sd-K2-RR7"/>
                             <constraint firstItem="WS3-KO-xaL" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="AzI-l7-aia"/>
-                            <constraint firstItem="BTq-bX-Fdd" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="EGJ-zZ-NUs"/>
-                            <constraint firstItem="BTq-bX-Fdd" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="TnQ-gg-2H2"/>
-                            <constraint firstItem="WS3-KO-xaL" firstAttribute="top" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="URa-lp-7h4"/>
-                            <constraint firstItem="WS3-KO-xaL" firstAttribute="top" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="WQd-Af-238"/>
-                            <constraint firstItem="BTq-bX-Fdd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ZaZ-aD-Jkj"/>
-                            <constraint firstItem="5cb-WW-SJm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="a1e-Fy-KBe"/>
-                            <constraint firstItem="5cb-WW-SJm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="glI-0e-IM1"/>
-                            <constraint firstItem="5cb-WW-SJm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="j6N-T1-fsD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dK5-Sd-KGP" secondAttribute="trailing" id="Scf-js-hRW"/>
+                            <constraint firstItem="WS3-KO-xaL" firstAttribute="top" secondItem="dK5-Sd-KGP" secondAttribute="bottom" id="izp-SV-VLc"/>
+                            <constraint firstItem="dK5-Sd-KGP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lFc-7k-R3L"/>
+                            <constraint firstItem="dK5-Sd-KGP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lUO-pB-NN8"/>
                             <constraint firstItem="WS3-KO-xaL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nzo-T7-in4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="dko-ia-7JT"/>
                     <connections>
                         <outlet property="imageView" destination="5cb-WW-SJm" id="vDF-kR-DhQ"/>
                         <outlet property="tabBar" destination="WS3-KO-xaL" id="VHf-z3-ZyV"/>
+                        <segue destination="Et1-ob-feT" kind="popoverPresentation" identifier="goToProducts" popoverAnchorView="WS3-KO-xaL" id="L8U-Q9-n9M">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="964" y="31.934032983508249"/>
+        </scene>
+        <!--Product Table View Controller-->
+        <scene sceneID="U8Z-Cw-nQQ">
+            <objects>
+                <tableViewController id="Et1-ob-feT" customClass="ProductTableViewController" customModule="HotdogOrNot" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Viv-JN-G7N">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="Et1-ob-feT" id="9Dw-aX-naX"/>
+                            <outlet property="delegate" destination="Et1-ob-feT" id="x5a-Ag-CaG"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z71-fT-Bac" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationBar contentMode="scaleToFill" id="ZyT-o9-hOB">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <items>
+                        <navigationItem title="Title" id="wxK-UQ-Vox">
+                            <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="YPU-lx-C0q"/>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+            </objects>
+            <point key="canvasLocation" x="964" y="847"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3v1-tf-pzY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ulm-Hi-0cb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ale-hr-muG">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Z6g-ti-Mge"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="US8-eP-Tqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="31.934032983508249"/>
         </scene>
