--- a/HotdogOrNot/Supporting files/ProductTableViewCell.xib
+++ b/HotdogOrNot/Supporting files/ProductTableViewCell.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,14 +27,14 @@
                             <constraint firstAttribute="height" constant="126" id="VGs-1h-aIe" userLabel="height = 125"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFL-rs-urL">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFL-rs-urL">
                         <rect key="frame" x="155" y="12" width="233" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JKC-KX-loo">
-                        <rect key="frame" x="213" y="81" width="114" height="57"/>
+                        <rect key="frame" x="266" y="81" width="114" height="57"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mercadopago" translatesAutoresizingMaskIntoConstraints="NO" id="s0W-qD-UAN">
                                 <rect key="frame" x="0.0" y="0.0" width="57" height="57"/>
@@ -74,10 +73,10 @@
                     <constraint firstItem="JKC-KX-loo" firstAttribute="bottom" secondItem="qrY-fR-PsO" secondAttribute="bottom" id="Kdw-Uh-hsA"/>
                     <constraint firstAttribute="trailingMargin" secondItem="oFL-rs-urL" secondAttribute="trailing" constant="-8" id="YJY-4E-iKO"/>
                     <constraint firstItem="qrY-fR-PsO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="goS-HD-4QO"/>
-                    <constraint firstItem="JKC-KX-loo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.35" id="jFc-Rj-obf"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oFL-rs-urL" secondAttribute="trailing" constant="8" id="jKR-qY-FYi"/>
                     <constraint firstItem="UV4-mk-T69" firstAttribute="top" secondItem="oFL-rs-urL" secondAttribute="bottom" constant="10" id="jh5-8F-mmr"/>
                     <constraint firstItem="qrY-fR-PsO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="y2j-cX-7ki"/>
+                    <constraint firstItem="JKC-KX-loo" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="yu1-Un-nN5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
