--- a/HotdogOrNot/Base.lproj/Main.storyboard
+++ b/HotdogOrNot/Base.lproj/Main.storyboard
@@ -22,17 +22,46 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5cb-WW-SJm">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="470"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="375" id="H0u-iw-Uov"/>
                                         </constraints>
                                     </imageView>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="whG-r8-iqn">
+                                        <rect key="frame" x="0.0" y="470" width="375" height="128"/>
+                                        <color key="backgroundColor" red="0.98431372549999996" green="0.0" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="7rt-F0-qVA"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tdm-5Y-TNN">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="EnD-xx-07i">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </view>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="5cb-WW-SJm" firstAttribute="top" secondItem="dK5-Sd-KGP" secondAttribute="top" id="6PP-PJ-ZkO"/>
+                                    <constraint firstAttribute="bottom" secondItem="whG-r8-iqn" secondAttribute="bottom" id="SMd-Nj-zfg"/>
+                                    <constraint firstAttribute="trailing" secondItem="whG-r8-iqn" secondAttribute="trailing" id="dag-ev-cWg"/>
+                                    <constraint firstAttribute="trailing" secondItem="whG-r8-iqn" secondAttribute="trailing" id="dow-0v-2dd"/>
+                                    <constraint firstItem="whG-r8-iqn" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="kVM-nC-HPe"/>
+                                    <constraint firstItem="whG-r8-iqn" firstAttribute="top" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="kwk-S1-zU5"/>
                                     <constraint firstItem="5cb-WW-SJm" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="lQO-Aq-6g3"/>
-                                    <constraint firstAttribute="bottom" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="wY7-k2-RFs"/>
+                                    <constraint firstAttribute="bottom" secondItem="whG-r8-iqn" secondAttribute="bottom" id="qig-n3-B9M"/>
+                                    <constraint firstItem="whG-r8-iqn" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="r4W-ud-3h4"/>
                                     <constraint firstAttribute="trailing" secondItem="5cb-WW-SJm" secondAttribute="trailing" id="zdp-Wa-egX"/>
                                 </constraints>
                             </view>
