--- a/HotdogOrNot/Base.lproj/Main.storyboard
+++ b/HotdogOrNot/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,29 +22,29 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5cb-WW-SJm">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="470"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="417"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="375" id="H0u-iw-Uov"/>
                                         </constraints>
                                     </imageView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="whG-r8-iqn">
-                                        <rect key="frame" x="0.0" y="470" width="375" height="128"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="whG-r8-iqn">
+                                        <rect key="frame" x="0.0" y="417" width="375" height="181"/>
                                         <color key="backgroundColor" red="0.98431372549999996" green="0.0" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="7rt-F0-qVA"/>
+                                            <constraint firstAttribute="height" constant="181" id="oc2-MX-1lc"/>
                                         </constraints>
-                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tdm-5Y-TNN">
-                                            <size key="itemSize" width="50" height="50"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tdm-5Y-TNN">
+                                            <size key="itemSize" width="160" height="181"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="EnD-xx-07i">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="181"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="181"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </view>
                                             </collectionViewCell>
@@ -54,11 +54,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="5cb-WW-SJm" firstAttribute="top" secondItem="dK5-Sd-KGP" secondAttribute="top" id="6PP-PJ-ZkO"/>
+                                    <constraint firstItem="whG-r8-iqn" firstAttribute="top" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="857-Zg-GD0"/>
                                     <constraint firstAttribute="bottom" secondItem="whG-r8-iqn" secondAttribute="bottom" id="SMd-Nj-zfg"/>
                                     <constraint firstAttribute="trailing" secondItem="whG-r8-iqn" secondAttribute="trailing" id="dag-ev-cWg"/>
                                     <constraint firstAttribute="trailing" secondItem="whG-r8-iqn" secondAttribute="trailing" id="dow-0v-2dd"/>
                                     <constraint firstItem="whG-r8-iqn" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="kVM-nC-HPe"/>
-                                    <constraint firstItem="whG-r8-iqn" firstAttribute="top" secondItem="5cb-WW-SJm" secondAttribute="bottom" id="kwk-S1-zU5"/>
                                     <constraint firstItem="5cb-WW-SJm" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="lQO-Aq-6g3"/>
                                     <constraint firstAttribute="bottom" secondItem="whG-r8-iqn" secondAttribute="bottom" id="qig-n3-B9M"/>
                                     <constraint firstItem="whG-r8-iqn" firstAttribute="leading" secondItem="dK5-Sd-KGP" secondAttribute="leading" id="r4W-ud-3h4"/>
@@ -92,6 +92,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="dko-ia-7JT"/>
                     <connections>
+                        <outlet property="collectionView" destination="whG-r8-iqn" id="TsI-HD-HLv"/>
                         <outlet property="imageView" destination="5cb-WW-SJm" id="vDF-kR-DhQ"/>
                         <outlet property="tabBar" destination="WS3-KO-xaL" id="VHf-z3-ZyV"/>
                         <segue destination="ekt-5K-QGz" kind="presentation" identifier="goToProducts" id="L8U-Q9-n9M"/>
