--- a/HotdogOrNot/Supporting files/PastSearchCollectionViewCell.xib
+++ b/HotdogOrNot/Supporting files/PastSearchCollectionViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="160" height="181"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="is2-Hj-zb1" customClass="SpringView" customModule="Spring">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="is2-Hj-zb1">
                         <rect key="frame" x="0.0" y="0.0" width="160" height="181"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Term" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVY-vb-KQp">
@@ -55,7 +55,6 @@
             <connections>
                 <outlet property="searchImage" destination="qXu-4K-4G2" id="1hc-5n-j3i"/>
                 <outlet property="searchTermLabel" destination="EVY-vb-KQp" id="RL9-wK-GFq"/>
-                <outlet property="springView" destination="is2-Hj-zb1" id="dlb-kx-CFl"/>
             </connections>
             <point key="canvasLocation" x="68" y="39.5"/>
         </collectionViewCell>
